Bug Fixes
Editing Task Name & Completed - Expanded Desktop
Always do list animation
Don't overflow and create lots of context menu scrollbars mobile
Don't show today icon on completed tasks

--- a/source/scss/_contextmenu.scss
+++ b/source/scss/_contextmenu.scss
@@ -5,7 +5,10 @@
 	right: 0;
 	bottom: 0;
 	z-index: 100;
-	// overflow: hidden;
+
+	@media (max-width: $tablet-breakpoint - 1) {
+		overflow: hidden;
+	}
 
 	&.hide {
 		opacity: 0;
